force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <label>地址</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>地址名稱</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>