force-app/main/default/objects/Address__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>地區</label>
    <length>10</length>
    <type>Text</type>
</CustomField>