force-app/main/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>縣市</label>
    <length>10</length>
    <type>Text</type>
</CustomField>