force-app/main/default/objects/Address__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>郵遞區號</label>
    <length>5</length>
    <type>Text</type>
</CustomField>